Fix logo distortion on medium screens (scale height with width)

--- a/css/style.css
+++ b/css/style.css
@@ -676,6 +676,7 @@ ul.news_lst li {
     }
     .logo_frm img {
         width: 90%;
+        height: auto;
     }
     .logo_frm {
         width: 30%
